--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -30,7 +30,7 @@ jobs:
         run: bundle install
 
       - name: Swift Packages Cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         id: cache
         with:
           path: |
@@ -40,9 +40,9 @@ jobs:
           restore-keys: ${{ runner.os }}-deps-v1-
 
       - name: Run Tests (No Cache)
-        if: steps.setup.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: bundle exec fastlane unit_test
       
       - name: Run Tests (Cache)
-        if: steps.setup.outputs.cache-hit == 'true'
+        if: steps.cache.outputs.cache-hit == 'true'
         run: bundle exec fastlane unit_test skip_package_dependencies_resolution:true
