--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,7 +66,22 @@ jobs:
         env:
           IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
 
-      # Build & upload using your Fastlane lane (Fastfile must force manual signing on CI)
+      # Quick diagnostics (helps a ton if signing fails)
+      - name: Show imported signing identities
+        run: security find-identity -v -p codesigning | sed -E 's/^(.*)"Apple/\1"Apple/'
+
+      - name: Show installed provisioning profiles
+        run: |
+          ls "$HOME/Library/MobileDevice/Provisioning Profiles" || true
+          for f in "$HOME/Library/MobileDevice/Provisioning Profiles"/*.mobileprovision; do
+            [[ -e "$f" ]] || continue
+            uuid=$(/usr/libexec/PlistBuddy -c Print:UUID /dev/stdin <<< "$(security cms -D -i "$f")")
+            name=$(/usr/libexec/PlistBuddy -c Print:Name /dev/stdin <<< "$(security cms -D -i "$f")")
+            appid=$(/usr/libexec/PlistBuddy -c 'Print:Entitlements:application-identifier' /dev/stdin <<< "$(security cms -D -i "$f")" 2>/dev/null || echo "n/a")
+            echo "$uuid  $name  $appid"
+          done
+
+      # Build & upload using your Fastlane lane (Fastfile forces manual signing on CI)
       - name: Fastlane beta_internal
         env:
           CI: "true"
@@ -76,7 +91,7 @@ jobs:
           PROFILE_UUID: ${{ steps.prof.outputs.uuid }}
           PROFILE_NAME: ${{ steps.prof.outputs.name }}
           FASTLANE_XCODEBUILD_SETTINGS_TIMEOUT: 120
-        run: bundle exec fastlane beta_internal
+        run: bundle exec fastlane beta_internal --verbose
 
       # Save build artifacts (ipa & dSYM) for debugging / manual distribution
       - name: Upload artifacts (ipa & dSYM)
@@ -87,4 +102,15 @@ jobs:
           path: |
             Build/*.ipa
             Build/*.dSYM.zip
+          if-no-files-found: ignore
+
+      # Always upload logs so debugging is easy if anything fails
+      - name: Upload build logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: xcode-logs
+          path: |
+            ~/Library/Logs/gym/*.log
+            ~/Library/Developer/Xcode/DerivedData/**/Logs/Build/*.xcresult
           if-no-files-found: ignore
